[tool.poetry]
name = "DiffDock"
version = "1.0.0"
description = "Macrocosmos fork of DiffDock."
authors = ["Macrocosmos <dev@macrocosmos.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core dependencies
torch = "2.3.0"
dllogger = { git = "https://github.com/NVIDIA/dllogger.git" }
e3nn = "0.5.0"
fair-esm = { version = "2.0.0", extras = ["esmfold"] }
networkx = "2.8.4"
#openfold = { git = "https://github.com/aqlaboratory/openfold.git", rev = "4b41059694619831a7db195b7e0988fc4ff3a307" }
pandas = ">=2.2.0"
numpy = ">=2.0.0"
prody = "2.2.0"
pybind11 = "2.11.1"
rdkit = "2022.03.3"
scikit-learn = "1.1.0"
scipy = "1.15.1"

# PyTorch Geometric dependencies
torch-cluster = { version = "1.6.0+pt113cu117", source = "pytorch-geometric" }
torch-geometric = "2.2.0"
torch-scatter = { version = "2.1.0+pt113cu117", source = "pytorch-geometric" }
torch-sparse = { version = "0.6.16+pt113cu117", source = "pytorch-geometric" }
torch-spline-conv = { version = "1.2.1+pt113cu117", source = "pytorch-geometric"}
torchmetrics = "0.11.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-geometric"
url = "https://pytorch-geometric.com/whl/torch-1.13.1+cu117.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
